@@ -10,9 +10,13 @@
         
 2012-12-05  JJ Allaire <jj@rstudio.org>
 
-        * src/Attributes.cpp: use code generation for compileAttributes
-        * src/AttributesGen.cpp: use code generation for compileAttributes
-        * src/AttributesGen.h: use code generation for compileAttributes
+        * src/Attributes.R: direct hookup of external ptr in sourceCpp
+        * src/Attributes.cpp: use code generation for compileAttributes;
+        direct hookup of external ptr in sourceCpp
+        * src/AttributesGen.cpp: use code generation for compileAttributes;
+        direct hookup of external ptr in sourceCpp
+        * src/AttributesGen.h: use code generation for compileAttributes;
+        direct hookup of external ptr in sourceCpp
         * src/Module.cpp: fix typo in GetCppCallable
 
 2012-12-04  Dirk Eddelbuettel  <edd@debian.org>
